--- a/style.css
+++ b/style.css
@@ -156,6 +156,12 @@ header{
   margin-bottom:0.5rem;
 }
 
+a.card{
+  color:inherit;
+  text-decoration:none;
+  display:block;
+}
+
 /* ================= WHY ================= */
 .why{
   background:var(--light-blue);
@@ -172,13 +178,6 @@ header{
   color:var(--blue);
   margin-bottom:0.5rem;
 }
-
-.services a.card{
-  color:inherit;
-  text-decoration:none;
-  display:block;
-}
-
 /* ================= CTA ================= */
 .cta{
   background:var(--blue);
@@ -295,4 +294,5 @@ select{
   padding:10px 16px;
   border-radius:50%;
 }
+
 
