--- a/style.css
+++ b/style.css
@@ -217,6 +217,8 @@ a.card{
   color:inherit;
 }
 
+#duration-wrapper{ display:none; }
+
 /* ================= WHY ================= */
 .why{
   background:var(--light-blue);
@@ -349,6 +351,7 @@ select{
   padding:10px 16px;
   border-radius:50%;
 }
+
 
 
 
