--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ header{
 
 /* ================= HERO-BACKGROUND ================= */
 .hero-bg{
-  background:url("images/hero-recovery.jpg") center/cover no-repeat;
+  background:url("https://i.ibb.co/6J19nH52/icebath.jpg") center/cover no-repeat;
   position:relative;
 }
 
@@ -369,6 +369,7 @@ select{
   padding:10px 16px;
   border-radius:50%;
 }
+
 
 
 
