--- a/style.css
+++ b/style.css
@@ -84,6 +84,19 @@ header{
   color:var(--blue);
 }
 
+.logo{
+  display:flex;
+  align-items:center;
+  gap:10px;
+}
+
+.logo-img{
+  width:40px;
+  height:40px;
+  border-radius:50%;
+  object-fit:cover;
+}
+
 /* ================= HERO ================= */
 .hero{
   background:linear-gradient(to right,var(--blue),var(--blue-dark));
@@ -369,6 +382,7 @@ select{
   padding:10px 16px;
   border-radius:50%;
 }
+
 
 
 
