--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ header{
 
 /* ================= HERO-BACKGROUND ================= */
 .hero-bg{
-  background:url("https://i.ibb.co/6J19nH52/icebath.jpg") center/cover no-repeat;
+  background:url("https://i.ibb.co/p6mtQ8Hw/home.jpg") center/cover no-repeat;
   position:relative;
 }
 
@@ -390,6 +390,7 @@ select{
   padding:10px 16px;
   border-radius:50%;
 }
+
 
 
 
